--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h2{
     background-image: url('../images/Akan.png');
 }
 h3{
-    color: green;
+    color: blue;
 }
 .card-text{
     color: red;
