h3 color to #fff76a

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h2{
     background-image: url('../images/Akan.png');
 }
 h3{
-    color: darkcyan;
+    color: #fff76a;
 }
 .card-text{
     color: red;
